# Basic-tools-and-methods-for-programming-autonomous-robots-laboratory

./: README.md
Lab11/: cuda.ipynb
Lab12/: readme.md  robot_trajectory.py  spatial_3R_robot.urdf
Lab3/: README.md
Lab3/src/lab3_number_listener/: package.xml  setup.cfg  setup.py
Lab3/src/lab3_number_listener/lab3_number_listener/: publisher.py  subscriber.py
Lab3/src/lab3_turtle_package/: package.xml  setup.cfg  setup.py
Lab3/src/lab3_turtle_package/lab3_turtle_package/: calculate_distance.py  turtle_steering.py
Lab3/src/py_pubsub/: package.xml  setup.py
Lab4/: README.md
Lab4/src/sample_robot/sample_joints/: package.xml  setup.cfg  setup.py
Lab4/src/sample_robot/sample_joints/sample_joints/: sample_joint_states.py  show_joint_states.py
Lab4/src/sample_robot/sample_robot_bringup/: CMakeLists.txt  package.xml
Lab4/src/sample_robot/sample_robot_bringup/launch/: sample_robot_bringup_launch.py  single_rrbot.urdf
Lab5/: README.md
Lab5/src/ur_py_control/ur_py_control/: publisher_joint_trajectory_controller.py  show_joint_states.py
Lab6/: README.md
Lab6/src/ROS2_ur_moveit_examples/src/: hello_moveit.cpp  kinematics.cpp  planning_scene.cpp
Lab7/: README.md
Lab7/src/ros2_object_detection/interface_tutorial/: CMakeLists.txt  package.xml
Lab7/src/ros2_object_detection/interface_tutorial/msg/: Num.msg
Lab7/src/ros2_object_detection/ros_object_detection/: package.xml  setup.cfg  setup.py
Lab7/src/ros2_object_detection/ros_object_detection/launch/: detect_launch.py  image_to_pcl_launch.py  publish_video_launch.py  show_on_pcl_launch.py  show_tfs_launch.py  show_trajectory_launch.py
Lab7/src/ros2_object_detection/ros_object_detection/ros_object_detection/: detect.py  image_to_pcl.py  publish_video.py  show_on_pcl.py  show_tfs.py  show_trajectory.py
Lab7/src/ros2_object_detection/ros_object_detection_msgs/: CMakeLists.txt  package.xml
Lab8/: README.md
Lab8/src/turtlebot3_autocontrol/: package.xml  setup.cfg  setup.py
Lab8/src/turtlebot3_autocontrol/launch/: traverse.launch.py  turtlebot3_world.launch.py
Lab8/src/turtlebot3_autocontrol/turtlebot3_autocontrol/: traverse.py
Lab8/src/turtlebot3_autocontrol/worlds/: maze.world
Lab8/src/turtlebot3_simulations/: README.md
Lab8/src/turtlebot3_simulations/turtlebot3_fake_node/: CHANGELOG.rst  CMakeLists.txt  package.xml
Lab8/src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt
Lab8/src/turtlebot3_simulations/turtlebot3_simulations/: CHANGELOG.rst  CMakeLists.txt  package.xml
Lab9/: CMakeLists.txt  readme.md
Lab9/examples/: atomic.cpp  future.cpp  primes_loop.cpp  race_condition.cpp  safe_increment.cpp  sum_in_range.cpp  visual_lock.cpp  visual_multithreading.cpp  visual_race_condition.cpp
Lab9/tasks/: task1  task1.cpp  task2  task2.cpp  task3  task3.cpp
Lab9/utils/: timer.h
(+2 files in other folders)
